--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-        <title>car collections></title>
+    <title>car collections></title>
     <script defer src="app.js"></script>
-    <link href="beauty.css" rel="stylesheet" /></link>
+    <link href="beauty.css" rel="stylesheet" />
   </head>
   <body>
     <div>
       <div class="container"></div>
-      <p class = "newcontainer"></p>
+      <p class="newcontainer"></p>
     </div>
   </body>
 </html>
