adding to push to heroku

--- a/public/index.html
+++ b/public/index.html
@@ -14,37 +14,54 @@
     </div>
      <body>
       <div>
-      <a type="submit" class="register" href="anotherPage.html"> Create Account</a>
+      <a type="submit" class="register" href="SignUp.html"> Create Account </a>
       </div> 
-      <!-- <a onclick="document.getElementById('id01').style.display='block'">Sign Up</a> -->
-    <!-- <form method="POST" action="anotherPage.html">
-     <input type="text"/>
-     <input type="submit"/>
-    </form> -->
     <form id="user-form">
       <input type="text" name='search'>
-      <button type ="submit" id="submit">Search</button>
+      <button type ="submit" id="submit">Search Cars</button>
+    </form>
+        <form id="users">
+      <input type="text" name='search1'>
+      <button type ="submit" id="submit1">Search Users</button>
+    </form>
+        </form>
+        <form id="allUsers">
+      <button type ="submit" id="submit2">Show Users</button>
     </form>
     <div id="results">
       <span class="result-id">
-        <h3 class="car-name">C'mon man</h3>
+        <h3 class="car-name">Car name</h3>
         <!-- <img class="card-image" src="https://images.pexels.com/photos/1545743/pexels-photo-1545743.jpeg?cs=srgb&dl=pexels-yurii-hlei-1545743.jpg&fm=jpg"></ul> -->
         <h2 class="car-type"></h2>
         <div class="car-model">
-          <em>Summary:</em>
+          <em>Car type</em>
           <p>
-            <b>JOE</b> I'm Joe
+            <b>Car model</b> 
+          </p>
+        </div>
+           <span class="result-id">
+        <h3 class="car-name">Car id</h3>
+      </span>
+            <div id="results1">
+      <span class="result-id1">
+        <h3 class="user-name">User name</h3>
+        <!-- <img class="card-image" src="https://images.pexels.com/photos/1545743/pexels-photo-1545743.jpeg?cs=srgb&dl=pexels-yurii-hlei-1545743.jpg&fm=jpg"></ul> -->
+        <h2 class="user-phone_number"></h2>
+        <div class="user-email">
+          <em>User email</em>
+          <p>
+            <b>User phone number</b> 
           </p>
         </div>
       </span>
-      <span class="result-id">
-        <h3 class="car-name">Car Name</h3>
+      <span class="result-id1">
+        <h3 class="user-name">User id</h3>
         <!-- <img class="card-image" src="https://images.unsplash.com/photo-1525609004556-c46c7d6cf023?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Y2Fyc3xlbnwwfHwwfHw%3D&w=1000&q=80"></ul> -->
         <h2 class="container"></h2>
         <div class="newcontainer">
-          <em>Summary:</em>
+          <em>Instructions:</em>
           <p>
-            <b>Hey! </b> This car is not yours and will never be available.
+            <b>Hey! </b> Search for cars or owners by inputing the id number.
           </p>
         </div>
       </span>
