--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -54,7 +54,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -71,23 +71,44 @@
         title="Close Modal"
         >EXIT</span
       >
-      <form class="modal-content" action="/action_page.php">
+      <form class="modal-content" action="SignUp.html" href="index.html">
         <div class="container">
           <h1>Sign Up</h1>
           <p>Please fill in this form to create an account.</p>
           <hr />
-          <label for="name"><b>Name</b></label> -->
-          <input type="text" placeholder="Enter Name" name="text" required />
-          <label for="email"><b>Email</b></label> -->
-          <input type="text" placeholder="Enter Email" name="email" required />
-          <label for="phone_number"><b>Phone Number</b></label> -->
+          <label for="name"><b>Name</b></label>
           <input
             type="text"
-            placeholder="Enter phone_number"
+            placeholder="Enter Name"
+            id="1"
+            name="text"
+            required
+          />
+          <label for="email"><b>Email</b></label>
+          <input
+            type="text"
+            placeholder="Enter Email"
+            id="2"
             name="email"
             required
           />
-          <label>
+          <label for="phone_number"><b>Phone Number</b></label>
+          <input
+            type="text"
+            placeholder="Enter phone_number"
+            name="text"
+            id="3"
+            required
+          />
+          <!-- <label for="id"><b>ID</b></label>
+          <input
+            type="integer"
+            placeholder="Enter id"
+            name="email"
+            id="integer"
+            required
+          />
+          <label> -->
             <input
               type="checkbox"
               checked="checked"
@@ -96,12 +117,10 @@
             />
             Remember me
           </label>
-
           <p>
             By creating an account you agree to our
             <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
           </p>
-
           <div class="clearfix">
             <button
               type="button"
@@ -110,7 +129,9 @@
             >
               Cancel
             </button>
-            <button type="submit" class="signup">Sign Up</button>
+            <button type="submit" class="signup" href="index.html">
+              Sign Up
+            </button>
           </div>
         </div>
       </form>
